--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@heroicons/vue": "^2.2.0",
     "@nuxt/ui": "^2.14.1",
     "@pinia/nuxt": "^0.5.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@unocss/reset": "^66.1.0-beta.6",
     "axios": "^1.8.4",
     "nuxt": "^3.16.1",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
