--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "pm2:start": "pm2 start \"npm run build && npm run start\" --name pharmacy-fe"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
